[package]
name = "lumi"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.5.0"
quick-xml = { version = "0.38.3", features = ["serialize"]}
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
]

# this will probably be removed by patch 4?
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"